// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table[Base] should render correctly  1`] = `
<div>
  <div
    class="c-d6pwmj soui-table-wrapper c-gj61i4 soui-table-vertical-align-top c-e0wo1p soui-table-default"
    dir="ltr"
  >
    <div
      class="ciccmmt soui-table-head-wrapper"
    >
      <table
        style="transform: translate3d(0px, 0, 0);"
      >
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left c-2iwu5e soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div
      style="flex: 1; min-height: 0; min-width: 0; display: flex;"
    >
      <div
        data-soui-role="scroll"
        style="flex: 1; min-width: 0; min-height: 0; overflow: auto; width: 100%;"
      >
        <div
          data-soui-role="scroll-container"
          style="height: 100%; width: 100%; display: inline-flex; position: sticky; left: 0px; top: 0px;"
        >
          <div
            style="flex-grow: 1;"
          >
            <table
              style="transform: translate3d(0px, 0px, 0);"
            >
              <colgroup>
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
              </colgroup>
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Ephraim Wisozk
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Reunion
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Marketing Designer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Miami
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Osvaldo Beer
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Syrian Arab Republic
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Financial Controller
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    San Paulo
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Dylan Ratke
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Development Lead
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Boston
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Shaniya Jacobs
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Developer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Chengdu
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          style="margin-top: 0px; margin-right: 1px; height: 0px; width: 0px; overflow: hidden;"
        >
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about border 1`] = `
<div>
  <div
    class="c-d6pwmj soui-table-wrapper cf827ex soui-table-bordered c-gj61i4 soui-table-vertical-align-top c-e0wo1p soui-table-default"
    dir="ltr"
  >
    <div
      class="ciccmmt soui-table-head-wrapper"
    >
      <table
        style="transform: translate3d(0px, 0, 0);"
      >
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left c-2iwu5e soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div
      style="flex: 1; min-height: 0; min-width: 0; display: flex;"
    >
      <div
        data-soui-role="scroll"
        style="flex: 1; min-width: 0; min-height: 0; overflow: auto; width: 100%;"
      >
        <div
          data-soui-role="scroll-container"
          style="height: 100%; width: 100%; display: inline-flex; position: sticky; left: 0px; top: 0px;"
        >
          <div
            style="flex-grow: 1;"
          >
            <table
              style="transform: translate3d(0px, 0px, 0);"
            >
              <colgroup>
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
              </colgroup>
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Ephraim Wisozk
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Reunion
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Marketing Designer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Miami
                  </td>
                </tr>
                <tr
                  class="c-aexznp soui-table-row-striped"
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Osvaldo Beer
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Syrian Arab Republic
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Financial Controller
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    San Paulo
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Dylan Ratke
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Development Lead
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Boston
                  </td>
                </tr>
                <tr
                  class="c-aexznp soui-table-row-striped"
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Shaniya Jacobs
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Developer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Chengdu
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          style="margin-top: 0px; margin-right: 1px; height: 0px; width: 0px; overflow: hidden;"
        >
           
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about group 1`] = `
<div
  class="c-d6pwmj soui-table-wrapper cf827ex soui-table-bordered c-gj61i4 soui-table-vertical-align-top c-e0wo1p soui-table-default"
  dir="ltr"
>
  <div
    class="ciccmmt soui-table-head-wrapper"
  >
    <table
      style="transform: translate3d(0px, 0, 0);"
    >
      <colgroup>
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
        <col
          style="width: 0px;"
        />
      </colgroup>
      <thead>
        <tr>
          <th
            class="c-2xciz8 soui-table-cell-align-left c-1y2rlt soui-table-cell-group"
            colspan="3"
            dir="ltr"
            style="padding: 0px;"
          >
            <div>
              <span
                style="background: rgb(232, 235, 240); display: block; line-height: 40px; color: rgb(20, 23, 55);"
              >
                Name
              </span>
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left"
            dir="ltr"
            rowspan="3"
          >
            <div
              class=""
            >
              <span>
                Country
              </span>
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left c-2iwu5e soui-table-cell-ignore-border c-1y2rlt soui-table-cell-group"
            colspan="2"
            dir="ltr"
            style="padding: 0px;"
          >
            <div>
              <span>
                Other
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="c-2xciz8 soui-table-cell-align-left c-1y2rlt soui-table-cell-group"
            colspan="2"
            dir="ltr"
          >
            <div>
              True Name
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Nick Name
              </span>
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Office
              </span>
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left c-2iwu5e soui-table-cell-ignore-border"
            dir="ltr"
            rowspan="2"
          >
            <div
              class=""
            >
              <span>
                Position
              </span>
            </div>
          </th>
        </tr>
        <tr>
          <th
            class="c-2xciz8 soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                First Name
              </span>
            </div>
          </th>
          <th
            class="c-2xciz8 soui-table-cell-align-left"
            dir="ltr"
            rowspan="1"
          >
            <div
              class=""
            >
              <span>
                Last Name
              </span>
            </div>
          </th>
        </tr>
      </thead>
    </table>
  </div>
  <div
    style="flex: 1; min-height: 0; min-width: 0; display: flex;"
  >
    <div
      data-soui-role="scroll"
      style="flex: 1; min-width: 0; min-height: 0; overflow: auto; width: 100%;"
    >
      <div
        data-soui-role="scroll-container"
        style="height: 100%; width: 100%; display: inline-flex; position: sticky; left: 0px; top: 0px;"
      >
        <div
          style="flex-grow: 1;"
        >
          <table
            style="transform: translate3d(0px, 0px, 0);"
          >
            <colgroup>
              <col
                style="width: 0px;"
              />
              <col
                style="width: 0px;"
              />
              <col
                style="width: 0px;"
              />
              <col
                style="width: 0px;"
              />
              <col
                style="width: 0px;"
              />
              <col
                style="width: 0px;"
              />
            </colgroup>
            <tbody>
              <tr
                class=""
              >
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Ephraim
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Wisozk
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  nickname
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Reunion
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Miami
                </td>
                <td
                  class="c-2iwu5e soui-table-cell-ignore-border"
                  colspan="1"
                  dir="ltr"
                >
                  Marketing Designer
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Osvaldo
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Beer
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  nickname
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Syrian Arab Republic
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  San Paulo
                </td>
                <td
                  class="c-2iwu5e soui-table-cell-ignore-border"
                  colspan="1"
                  dir="ltr"
                >
                  Financial Controller
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Dylan
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Ratke
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  nickname
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Peru
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Boston
                </td>
                <td
                  class="c-2iwu5e soui-table-cell-ignore-border"
                  colspan="1"
                  dir="ltr"
                >
                  Development Lead
                </td>
              </tr>
              <tr
                class=""
              >
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Shaniya
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Jacobs
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  nickname
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Peru
                </td>
                <td
                  class=""
                  colspan="1"
                  dir="ltr"
                >
                  Chengdu
                </td>
                <td
                  class="c-2iwu5e soui-table-cell-ignore-border"
                  colspan="1"
                  dir="ltr"
                >
                  Developer
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
      <div
        style="margin-top: 0px; margin-right: 1px; height: 0px; width: 0px; overflow: hidden;"
      >
         
      </div>
    </div>
  </div>
</div>
`;

exports[`Table[Base] should render correctly about size 1`] = `
<div>
  <div
    class="c-3srah8 soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper c-ds7wjl soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="c-6kjs3c soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="c-bmqjip soui-radio-indicator-wrapper"
      >
        <span
          class="c-48u5rw soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-9af744 soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="c-d6pwmj soui-table-wrapper c-gj61i4 soui-table-vertical-align-top c-e0wo1p soui-table-default"
    dir="ltr"
  >
    <div
      class="ciccmmt soui-table-head-wrapper"
    >
      <table
        style="transform: translate3d(0px, 0, 0);"
      >
        <colgroup>
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
          <col
            style="width: 0px;"
          />
        </colgroup>
        <thead>
          <tr>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Name
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Country
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Position
                </span>
              </div>
            </th>
            <th
              class="c-2xciz8 soui-table-cell-align-left c-2iwu5e soui-table-cell-ignore-border"
              dir="ltr"
              rowspan="1"
            >
              <div
                class=""
              >
                <span>
                  Office
                </span>
              </div>
            </th>
          </tr>
        </thead>
      </table>
    </div>
    <div
      style="flex: 1; min-height: 0; min-width: 0; display: flex;"
    >
      <div
        data-soui-role="scroll"
        style="flex: 1; min-width: 0; min-height: 0; overflow: auto; width: 100%;"
      >
        <div
          data-soui-role="scroll-container"
          style="height: 100%; width: 100%; display: inline-flex; position: sticky; left: 0px; top: 0px;"
        >
          <div
            style="flex-grow: 1;"
          >
            <table
              style="transform: translate3d(0px, 0px, 0);"
            >
              <colgroup>
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
                <col
                  style="width: 0px;"
                />
              </colgroup>
              <tbody>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Ephraim Wisozk
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Reunion
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Marketing Designer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Miami
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Osvaldo Beer
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Syrian Arab Republic
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Financial Controller
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    San Paulo
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Dylan Ratke
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Development Lead
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Boston
                  </td>
                </tr>
                <tr
                  class=""
                >
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Shaniya Jacobs
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Peru
                  </td>
                  <td
                    class=""
                    colspan="1"
                    dir="ltr"
                  >
                    Developer
                  </td>
                  <td
                    class="c-2iwu5e soui-table-cell-ignore-border"
                    colspan="1"
                    dir="ltr"
                  >
                    Chengdu
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          style="margin-top: 0px; margin-right: 1px; height: 0px; width: 0px; overflow: hidden;"
        >
           
        </div>
      </div>
    </div>
  </div>
</div>
`;
